--- a/templates/login.html
+++ b/templates/login.html
@@ -43,12 +43,14 @@
             </div>
             <small class="text-muted ml-2">
                 <a href="{{ url_for('forgot_page') }}">Forgot Password?</a>
+                
             </small>
         </form>
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
+            <input type="radio" id="Need an Account" name="Need an Account" value="Need an Account">
+                <label for="male">Need an Account</label><br> <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
         </small>
     </div>
 {% endblock content %}
