list psychologists add

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -201,6 +201,7 @@
       {%endif%}
      </form>
       {%endif%}
+      <a class="nav-item nav-link" href="{{url_for('psychologist_page_all')}}"> <p style="color:red">List all Psychologist </p></a>
     </main>
 
 
